update new boilerplate 🎉

--- a/package.json
+++ b/package.json
@@ -8,30 +8,24 @@
   },
   "scripts": {
     "pretest": "eslint .",
-    "start": "node index.js",
-    "test:e2e": "jest --verbose --testPathPattern e2e --globalSetup ./e2e/globalSetup --globalTeardown ./e2e/globalTeardown --runInBand",
-    "test:unit": "jest --verbose --testPathIgnorePatterns e2e",
-    "test": "npm run test:e2e && npm run test:unit",
-    "lint": "eslint .",
-    "docs:generate": "jsdoc -c jsdoc.conf --readme README-docs.md",
-    "docs:deploy": "rm -rf docs && npm run docs:generate && gh-pages -d docs"
+    "start": "nodemon index.js",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
+    "path": "^0.12.7",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.5.0"
   },
   "devDependencies": {
-    "docdash": "^1.2.0",
     "eslint": "^8.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.22.1",
-    "gh-pages": "^3.1.0",
     "jest": "^27.0.1",
-    "jsdoc": "^3.6.6",
-    "jsdoc-http-plugin": "^0.3.2",
-    "node-fetch": "^3.1.0",
-    "tree-kill": "^1.2.2"
+    "nodemon": "^2.0.7",
+    "sequelize-cli": "^6.2.0"
   }
 }
